--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -70,9 +71,4 @@ article p {
 #burguer:hover {
     background-color: rgb(187, 186, 186);
     color: black;
-}
-
-.menu::after {
-    transition: 1s;
-    transform: scaleY(1.1);
 }
