--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ menu > ul > li > a {
     color: white;
     text-align: center;
     border-top:  1px solid rgb(182, 181, 181);
+    margin-left: 15px;
 }
 
 menu > ul > li > a:hover {
